--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Kishan Kumar Das",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.21.0"
   },
   "devDependencies": {
