--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "Kishan Kumar Das",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "http-errors": "^2.0.0",
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.5"
