--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "http-errors": "^2.0.0",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "sweetalert2": "^11.14.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.5"
