--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "author": "Kishan Kumar Das",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "http-errors": "^2.0.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.7.0",
     "sweetalert2": "^11.14.1"
   },
