--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "express-session": "^1.18.1",
     "http-errors": "^2.0.0",
     "moment": "^2.30.1",
-    "mongoose": "^8.7.0",
-    "sweetalert2": "^11.14.1"
+    "mongoose": "^8.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.5"
